# grr

./: Cargo.toml  README.md
camera/: Cargo.toml
camera/src/: lib.rs  tests.rs
core/: Cargo.toml
core/src/math/: christoffel.rs  field.rs  metric.rs  mod.rs
core/src/math/spacetimes/: mod.rs
core/src/math/spacetimes/kerr/: christoffel.py  mod.rs  tests.rs
core/src/math/spacetimes/minkowski/: mod.rs
core/src/math/spacetimes/schwarzchild/: mod.rs  tests.rs
disk/: Cargo.toml
disk/src/: lib.rs
disk/src/emission/: mod.rs
disk/tests/: fluid_4vel.rs
geodesic/: Cargo.toml
geodesic/src/: conserved.rs  integrator.rs  lib.rs  rhs.rs  state.rs
geodesic/tests/: kerr.rs  minkowski.rs  schwarzchild.rs
grr-wasm/: Cargo.toml  index.html
grr-wasm/src/: lib.rs
integrator/: Cargo.toml
integrator/src/: dp54.rs  dp87.rs  lib.rs  rk4.rs
integrator/tests/: README.md  integration.rs
png/: Cargo.toml
png/src/: lib.rs
render/: Cargo.toml
render/src/: lib.rs
tetrad/: Cargo.toml
tetrad/src/: lib.rs
tetrad/tests/: zamo.rs
